Fixed clipping bug

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ html{
     background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgb(0, 0, 0)),url(background.jpg);
     background-size: cover;
     background-position: center;
+    z-index: -16;
 }
 /*Default navigation bar*/
 header{
@@ -26,6 +27,7 @@ header{
     padding: 35px 0;
     display: flex;
     align-items: center;
+    z-index: +1;
     background-color: #eae7dc;
     justify-content: space-between;
     position: fixed;
@@ -127,6 +129,7 @@ header{
     transform: translateY(-50%);
     text-align: center;
     color: white;
+    z-index: 0;
 }
 .content h1{
     font-size: 70px;
@@ -233,8 +236,8 @@ MAKE SURE TO MAKE MATCHING IMAGES IN PHOTOSHOP*/
 /*The about page*/
 .aboutbanner{
     width: 100%;
-    height: 100vh;
-    background-color: black;
+    height: 50vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgb(0, 0, 0)),url(about-background.jpg);
     background-size: cover;
     background-position: center;
 }
